--- a/layouts/V3.xml
+++ b/layouts/V3.xml
@@ -231,15 +231,19 @@ license: creative commons CC-BY-NC-SA
 		<carousel name="systemcarousel">
 		    <type>horizontal</type>
 		    <color>00000000</color>
+			<size>1 1</size>
+			<pos>0 0</pos>
+			<maxLogoCount>1</maxLogoCount>
 		    <logoScale>1</logoScale>
-		    <logoSize>0.25 0.155</logoSize>
+		    <logoSize>1 0.4</logoSize>
          </carousel>
 		    
 		<text name="systemInfo">
 		    <backgroundColor>00000000</backgroundColor>
 		    <color>ffffff</color>
 		    <fontPath>./../assets/SST.ttf</fontPath>
-		    <fontSize>0.03</fontSize>     
+			<pos>0 0.8</pos>
+		    <fontSize>0.04</fontSize>     
 		</text>
 	  
 	</view>
