--- a/Minimal/layouts/V3.xml
+++ b/Minimal/layouts/V3.xml
@@ -7,7 +7,7 @@ license: creative commons CC-BY-NC-SA
 <theme>
 	
 	<formatVersion>4</formatVersion>
-
+<!-- System Details and Background -->
 	<view name="system">
 
 		<image name="background" extra="true">
@@ -30,7 +30,9 @@ license: creative commons CC-BY-NC-SA
 		</image>
 	
 	</view>
+<!-- System Details End -->
 
+<!-- Basic View Options Begin -->
 	<view name="basic">
 		
 		<text name="description" extra="false">
@@ -124,8 +126,91 @@ license: creative commons CC-BY-NC-SA
 		</image>
 	
 	</view>
+<!-- Basic View Options End -->
+
+<!-- Detailed View Options Begin -->
+		<view name="detailed">
 	
-	<view name="detailed, video">
+		<image name="background" extra="true">
+			<size>1 1</size>
+			<pos>0 0</pos>
+			<origin>0 0</origin>
+			<path>./../assets/bg.png</path>
+			<zIndex>0</zIndex>
+			<color>10667f</color>
+		</image>
+		
+		<image name="layout" extra="true">
+			<path>./../assets/gamelist.png</path>
+			<pos>0 0</pos>
+			<zIndex>2</zIndex>
+			<size>1 1</size>
+			<origin>0 0</origin>
+		</image>
+		
+		<text name="system_name" extra="true">
+			<text>${system.fullName}</text>
+			<forceUppercase>0</forceUppercase>
+			<size>0.5 0.025</size>
+			<pos>0.02 0.025</pos>
+			<color>ffffff</color>
+			<fontPath>./../assets/SST.ttf</fontPath>
+			<fontSize>0.04</fontSize>
+			<zIndex>2</zIndex>
+		</text>
+		
+		<text name="md_lbl_genre, md_genre, md_lbl_rating, md_lbl_developer, md_lbl_publisher, md_publisher, md_lbl_lastplayed, md_lbl_playcount, md_playcount, md_lbl_releasedate">
+			<pos>1 1</pos>
+		</text>
+		
+		<rating name="md_rating">
+			<pos>1 1</pos>
+			<size>0 0</size>
+		</rating>
+		
+		<textlist name="gamelist">
+			<selectorColor>0f85a5</selectorColor>
+			<selectedColor>ffffff</selectedColor>
+			<primaryColor>ffffff</primaryColor>
+			<secondaryColor>ffffff</secondaryColor>
+			<fontPath>./../assets/SST.ttf</fontPath>
+			<fontSize>0.03</fontSize>
+			<pos>0.307 0.170</pos>
+			<size>0.635 0.68</size>
+			<alignment>left</alignment>
+			<horizontalMargin>0.01</horizontalMargin>
+			<origin>0 0</origin>
+			<lineSpacing>2.27</lineSpacing>
+			<selectorImagePath>./../assets/box.png</selectorImagePath>
+			<selectorOffsetY>-0.01</selectorOffsetY>
+			<selectorHeight>0.0675</selectorHeight>
+		</textlist> 
+		
+		<image name="md_image">
+			<origin>0.5 0.5</origin>
+			<pos>0.1785 0.382</pos>
+			<maxSize>0.236 0.418</maxSize>
+		</image> 
+		
+		<text name="md_description">
+			<pos>0.061 0.624</pos>
+			<size>0.236 0.200</size>
+			<color>ffffff</color>
+			<fontSize>0.025</fontSize>
+			<fontPath>./../assets/noto.ttf</fontPath>
+		</text>
+		
+		<image name="logo">
+			<pos>1 1</pos>
+			<color>00000000</color>
+			<path>./../assets/box.png</path>
+		</image>
+	
+	</view>
+<!-- Detailed View Options End-->
+
+<!-- Video View Options Begin -->
+	<view name="video">
 	
 		<image name="background" extra="true">
 			<size>1 1</size>
@@ -223,7 +308,9 @@ license: creative commons CC-BY-NC-SA
 			</image>-->
 			
 	</view>		
-	
+<!-- Video View Options End -->
+
+<!-- Carousel View Options Begin -->
 	<feature supported="carousel">
       
 	  <view name="system">
@@ -249,6 +336,7 @@ license: creative commons CC-BY-NC-SA
 	</view>
 	
 	</feature>
+<!-- Carousel View Options End -->
 	
 </theme>
 		
