--- a/Minimal/layouts/V4.xml
+++ b/Minimal/layouts/V4.xml
@@ -232,15 +232,15 @@ license: creative commons CC-BY-NC-SA
 			<size>1 1</size>
 			<pos>0 0</pos>
 			<origin>0 0</origin>
-			<path>./../assets/bg.png</path>
-			<zIndex>0</zIndex>
+			<path>./../assets/bgb.png</path>
+			<zIndex>1</zIndex>
 			<color>10667f</color>
 		</image>
-		
+	
 		<image name="layout" extra="true">
-			<path>./../assets/gamelist.png</path>
+			<path>./../assets/gamelist_video.png</path>
 			<pos>0 0</pos>
-			<zIndex>2</zIndex>
+			<zIndex>3</zIndex>
 			<size>1 1</size>
 			<origin>0 0</origin>
 		</image>
@@ -253,77 +253,52 @@ license: creative commons CC-BY-NC-SA
 			<color>ffffff</color>
 			<fontPath>./../assets/SST.ttf</fontPath>
 			<fontSize>0.04</fontSize>
-			<zIndex>2</zIndex>
+			<zIndex>3</zIndex>
+
 		</text>
-		
+
 		<text name="md_lbl_genre, md_genre, md_lbl_rating, md_lbl_developer, md_lbl_publisher, md_publisher, md_lbl_lastplayed, md_lbl_playcount, md_playcount, md_lbl_releasedate">
 			<pos>1 1</pos>
+			<size>0 0</size>
+			<zIndex>0</zIndex>
 		</text>
 		
 		<rating name="md_rating">
 			<pos>1 1</pos>
 			<size>0 0</size>
+			<zIndex>0</zIndex>
 		</rating>
-		
+
+		<video name="md_video">
+			<pos>0.5 0.5</pos>
+			<origin>0.5 0.5</origin>
+			<maxSize>1 1.2</maxSize>
+			<zIndex>2</zIndex>
+			<delay>false</delay>
+			<showSnapshotNoVideo>false</showSnapshotNoVideo>
+			<showSnapshotDelay>false</showSnapshotDelay>
+		</video>
+
 		<textlist name="gamelist">
 			<selectorColor>0f85a5</selectorColor>
 			<selectedColor>ffffff</selectedColor>
 			<primaryColor>ffffff</primaryColor>
 			<secondaryColor>ffffff</secondaryColor>
 			<fontPath>./../assets/SST.ttf</fontPath>
-			<fontSize>0.03</fontSize>
-			<pos>0.307 0.170</pos>
-			<size>0.635 0.68</size>
-			<alignment>left</alignment>
+			<fontSize>0.04</fontSize>
+			<pos>0.11 0.165</pos>
+			<size>0.765 0.8</size>
+			<alignment>center</alignment>
 			<horizontalMargin>0.01</horizontalMargin>
 			<origin>0 0</origin>
-			<lineSpacing>2.27</lineSpacing>
-			<selectorImagePath>./../assets/box.png</selectorImagePath>
+			<lineSpacing>2.20</lineSpacing>
 			<selectorOffsetY>-0.01</selectorOffsetY>
-			<selectorHeight>0.0675</selectorHeight>
+			<selectorHeight>0.087</selectorHeight>
 		</textlist> 
-		
-		<image name="md_image">
-			<origin>0.5 0.5</origin>
-			<pos>0.1785 0.382</pos>
-			<maxSize>0.236 0.418</maxSize>
-		</image> 
-		
-		<text name="md_description">
-			<pos>0.061 0.624</pos>
-			<size>0.236 0.200</size>
-			<color>ffffff</color>
-			<fontSize>0.025</fontSize>
-			<fontPath>./../assets/noto.ttf</fontPath>
-		</text>
-		
-		<image name="logo">
-			<pos>1 1</pos>
-			<color>00000000</color>
-			<path>./../assets/box.png</path>
-		</image>
+
 	
 	</view>
 	
-	<view name="video">
-
-			<video name="md_video">
-				<origin>0.5 0.5</origin>
-				<pos>0.1785 0.382</pos>
-				<maxSize>0.236 0.418</maxSize>	
-				<delay>0</delay>
-				<default></default>
-				<showSnapshotNoVideo>true</showSnapshotNoVideo>
-				<showSnapshotDelay>false</showSnapshotDelay>
-			</video>
-
-			<!--<image name="md_marquee">
-				<pos>0.45 0.626</pos>
-				<origin>0 0</origin>
-				<maxSize>0.39 0.23</maxSize>
-			</image>-->
-			
-	</view>		
 <!-- Video View Options End -->
 
 <!-- Carousel View Options Begin -->
@@ -398,7 +373,7 @@ license: creative commons CC-BY-NC-SA
 			<origin>0.5 0.5</origin>
 			<maxSize>1 1.2</maxSize>
 			<zIndex>10</zIndex>
-			<color>10667f85</color>
+			<color>10667f</color>
 		</video>
 
 		<image name="md_image">
