--- a/Minimal/layouts/V4.xml
+++ b/Minimal/layouts/V4.xml
@@ -42,7 +42,7 @@ license: creative commons CC-BY-NC-SA
 
 	<menuText name="menutext, menutitle, menufooter, menutextsmall">
 			<selectorColor>0f85a5</selectorColor>
-			<color>ffffff</color>
+			<color>10667f</color>
 	</menuText>
 
 	</view>
@@ -275,7 +275,7 @@ license: creative commons CC-BY-NC-SA
 			<maxSize>1 1.2</maxSize>
 			<zIndex>2</zIndex>
 			<delay>false</delay>
-			<showSnapshotNoVideo>false</showSnapshotNoVideo>
+			<showSnapshotNoVideo>true</showSnapshotNoVideo>
 			<showSnapshotDelay>false</showSnapshotDelay>
 		</video>
 
